Dynamically load the JS into a single file

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Metro UI
-Theme URI: http://www.wp-metro-theme.com/
+Theme URI: http://www.wordpress-metro-theme.co.uk
 Description: Theme based on Microsoft's Metro UI
 Author: Jon Wigham
 Version: 1.0
