--- a/styles/src/common.css
+++ b/styles/src/common.css
@@ -1,4 +1,4 @@
-/* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
+/* =Common
 -------------------------------------------------------------- */
 
 html, body, div, span, applet, object, iframe,
