--- a/styles/src/sidebar.css
+++ b/styles/src/sidebar.css
@@ -17,12 +17,12 @@
 			margin-bottom: 10px;
 			}
 
-		#sidebar ul li.bullets ul li span {
+		#sidebar ul li ul li span {
 			display: block;
 			padding-left: 20px;
 			}
 
-		#sidebar ul li.bullets ul li span.arrow {
+		#sidebar ul li ul li span.arrow {
 			float: left;
 			width: 15px;
 			height: 15px;
@@ -78,6 +78,7 @@
 
 		#sidebar #categories ul li a span {
 			position: absolute;
+			padding-left: 0;
 			bottom: 10px;
 			left: 10px;
 			display: block;
