Turned the header links into the nav_menu

--- a/styles/src/header.css
+++ b/styles/src/header.css
@@ -74,7 +74,7 @@
 			text-transform: lowercase;
 			}
 
-			#site-title li.item_active {
+			#site-title li.current_page_item {
 				text-transform: none;
 				}
 
