Added some styles for list items in pages/posts

--- a/styles/src/accent.css
+++ b/styles/src/accent.css
@@ -15,3 +15,7 @@
 #sidebar #category_tiles ul li a:hover,
 #searchform input,
 #social { border-color: #{COLOUR}; }
+
+.post ul li:before, #main .page ul li:before {
+	background: #{COLOUR};
+	}
